<?xml version="1.0" encoding="utf-8"?>
<resources>
 <string name="mainMenu">Main Menu</string>
	
	<string name="pointstable">Points Table</string>
	<string name="theevent">The Event</string>
	<string name="teamgroups">Team Groups</string>
	<string name="exit">Exit</string>
    <string name="app_name">Fifa Worldcup 2018</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">Splash</string>
    <string name="fixtures">Fixtures</string>
    <string name="matchDetails">Match Details</string>
    
    
    <string name="webApiUrl">http://zairexport.com/saad/silverhawk/championsTrophy2017.json</string>
    <string name="myAdUnitId">ca-app-pub-3940256099942544/6300978111</string>

</resources>
