<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg01"
    android:orientation="vertical"
    tools:context="com.example.itx_m.fifaworldcup2018.StartingActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView"
        android:src="@drawable/logosmall" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_weight="1"
        android:orientation="vertical">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@android:style/Theme.Translucent"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/myAdUnitId" />

        <Button
            android:id="@+id/menuButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/ballbtn"
            android:text="@string/mainMenu"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/aboutButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/ballbtn"
            android:text="@string/theevent"
            android:textColor="#ffffff" />


        <Button
            android:id="@+id/exitButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/ballbtn"
            android:text="@string/exit"
            android:textColor="#ffffff" />
    </LinearLayout>

</LinearLayout>
