<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg01"
    android:orientation="vertical"
    tools:context="com.example.itx_m.fifaworldcup2018.CtMainMenu">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/logosmall" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_weight="1"
        android:orientation="vertical">
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@android:style/Theme.Translucent"
            ads:adSize="BANNER"
            ads:adUnitId="@string/myAdUnitId" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/ballbtn"
            android:onClick="showFixtures"
            android:text="@string/fixtures"
            android:textColor="#ffffff" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/ballbtn"
            android:onClick="showPointsTable"
            android:text="@string/pointstable"
            android:textColor="#ffffff"

            />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:background="@drawable/ballbtn"
            android:text="@string/teamgroups"
            android:textColor="#ffffff"


            />


    </LinearLayout>
</LinearLayout>
